--- a/json-schema/test/js/test.html
+++ b/json-schema/test/js/test.html
@@ -16,6 +16,25 @@ fetch("../../stops.json")
     .then(json => (stops = json));
 
 
+var stps = null;
+fetch("../../f.json")
+    .then(response => response.json())
+    .then(json => (stps = json));
+
+
+function testStops()
+{
+    var data1 = {'residential_address':{'namex':{}}};
+    var data2 = {};
+    var schema = stps;
+    console.log(schema);
+    console.log(tv4.validateResult(data1, schema, true, true));
+    console.log(tv4.validateMultiple(data1, schema, true, true));
+
+    alert("data 1: " + tv4.validate(data1, schema, true, true)); // true
+    alert("data 2: " + tv4.validate(data2, schema, true, true)); // false
+}
+
 function testAgencies()
 {
     tv4.addSchema('xxx', agencies);
@@ -34,3 +53,5 @@ function testAgencies()
 
 
 <a href="#" onclick="testAgencies()">Test Agencies Schema</a>
+<br/>
+<a href="#" onclick="testStops()">Test Stops Schema</a>
